[tool.poetry]
name = "samurai"
version = "0.2.0"
description = "backend for ctf framework"
authors = ["naphal <naphal@naphal.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
celery = "^5.2.7"
redis = "^4.3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
